added async movement service

--- a/IssmaRequiredList.Services/IssmaRequiredList.Services.csproj
+++ b/IssmaRequiredList.Services/IssmaRequiredList.Services.csproj
@@ -51,11 +51,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComposerService.cs" />
+    <Compile Include="MovementService.cs" />
+    <Compile Include="PieceService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PublisherService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IssmaRequiredList.Data\IssmaRequiredList.Data.csproj">
+      <Project>{798FFD33-76FD-41B6-AAA6-03E4CD96A193}</Project>
+      <Name>IssmaRequiredList.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
