--- a/IssmaRequiredList.Models/IssmaRequiredList.Models.csproj
+++ b/IssmaRequiredList.Models/IssmaRequiredList.Models.csproj
@@ -51,11 +51,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PieceModels\PieceConcise.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ComposerModels\" />
+    <Folder Include="MovementModels\" />
+    <Folder Include="PublisherModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
