--- a/IssmaRequiredList.Data/IssmaRequiredList.Data.csproj
+++ b/IssmaRequiredList.Data/IssmaRequiredList.Data.csproj
@@ -69,6 +69,14 @@
     <Compile Include="Migrations\202003021351438_AddedYearPublishedColumnToPiecesTable.designer.cs">
       <DependentUpon>202003021351438_AddedYearPublishedColumnToPiecesTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003062133589_DeletedIsAliveColumn.cs" />
+    <Compile Include="Migrations\202003062133589_DeletedIsAliveColumn.designer.cs">
+      <DependentUpon>202003062133589_DeletedIsAliveColumn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003062149427_DeletedIsMultiMovementColumn.cs" />
+    <Compile Include="Migrations\202003062149427_DeletedIsMultiMovementColumn.designer.cs">
+      <DependentUpon>202003062149427_DeletedIsMultiMovementColumn.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Entities\Movement.cs" />
     <Compile Include="Entities\Piece.cs" />
@@ -88,6 +96,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202003021351438_AddedYearPublishedColumnToPiecesTable.resx">
       <DependentUpon>202003021351438_AddedYearPublishedColumnToPiecesTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003062133589_DeletedIsAliveColumn.resx">
+      <DependentUpon>202003062133589_DeletedIsAliveColumn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003062149427_DeletedIsMultiMovementColumn.resx">
+      <DependentUpon>202003062149427_DeletedIsMultiMovementColumn.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
