--- a/IssmaRequiredList.Models/IssmaRequiredList.Models.csproj
+++ b/IssmaRequiredList.Models/IssmaRequiredList.Models.csproj
@@ -51,7 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MovementModels\MovementConcise.cs" />
     <Compile Include="PieceModels\PieceConcise.cs" />
+    <Compile Include="PieceModels\PieceDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -60,8 +62,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ComposerModels\" />
-    <Folder Include="MovementModels\" />
     <Folder Include="PublisherModels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IssmaRequiredList.Data\IssmaRequiredList.Data.csproj">
+      <Project>{798FFD33-76FD-41B6-AAA6-03E4CD96A193}</Project>
+      <Name>IssmaRequiredList.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
